Item name crash fix

--- a/Translation/UI.txt
+++ b/Translation/UI.txt
@@ -326,7 +326,7 @@ Trophies:
 好感度が少し上がりやすくなる=Your relationship with her rised a little
 ファーストキス=First Kiss
 タッチ操作に口が追加される=Mouth is added to touch operation
-ナカイキ達成=Making her cum
+ナカイキ達成=Cum from Insertion
 正常位で足閉じ時も挿入できるようになる=Can insert even when legs are closed in missionary
 ナカ出し達成=Nakadashi
 淫乱度が少し上がりやすくなる=Lewdness is likely to rise a little
