--- a/Translation/Days.txt
+++ b/Translation/Days.txt
@@ -3,16 +3,16 @@
 <size%3D28>Saturday</size>1<size%3D28>(土)</size>=<size%3D28>Day</size>1<size%3D28>(Saturday)</size>
 (日)=(Sunday)
 <size%3D28>Day</size>2<size%3D28>(日)</size>=<size%3D28>Day</size>2<size%3D28>(Sunday)</size>
-(日) あと5日=(Sunday) 5 more days
-<size%3D28>Day</size>2<size%3D28>(日) あと5日</size>=<size%3D28>Day</size>2<size%3D28>(Sunday) 5 more days</size>
-(月) あと5日=(Monday) 5 more days
-<size%3D28>Day</size>3<size%3D28>(月) あと5日</size>=<size%3D28>Day</size>3<size%3D28>(Monday) 5 more days</size>
-(火) あと4日=(Tuesday) 4 more days
-<size%3D28>Day</size>4<size%3D28>(火) あと4日</size>=<size%3D28>Day</size>4<size%3D28>(Tuesday) 4 more days</size>
-(水) あと3日=(Wednesday) 3 more days
-<size%3D28>Day</size>5<size%3D28>(水) あと3日</size>=<size%3D28>Day</size>5<size%3D28>(Wednesday) 3 more days</size>
-(木) あと2日=(Thursday) 2 more days
-<size%3D28>Day</size>6<size%3D28>(木) あと2日</size>=<size%3D28>Day</size>6<size%3D28>(Thursday) 2 more days</size>
+(日) あと5日=(Sunday) 5 days left
+<size%3D28>Day</size>2<size%3D28>(日) あと5日</size>=<size%3D28>Day</size>2<size%3D28>(Sunday) 5 days left</size>
+(月) あと5日=(Monday) 5 days left
+<size%3D28>Day</size>3<size%3D28>(月) あと5日</size>=<size%3D28>Day</size>3<size%3D28>(Monday) 5 days left</size>
+(火) あと4日=(Tuesday) 4 days left
+<size%3D28>Day</size>4<size%3D28>(火) あと4日</size>=<size%3D28>Day</size>4<size%3D28>(Tuesday) 4 days left</size>
+(水) あと3日=(Wednesday) 3 days left
+<size%3D28>Day</size>5<size%3D28>(水) あと3日</size>=<size%3D28>Day</size>5<size%3D28>(Wednesday) 3 days left</size>
+(木) あと2日=(Thursday) 2 days left
+<size%3D28>Day</size>6<size%3D28>(木) あと2日</size>=<size%3D28>Day</size>6<size%3D28>(Thursday) 2 days left</size>
 (金)=(Friday)
 <size%3D28>Day</size>70<size%3D28>(金)</size>=<size%3D28>Day</size>70<size%3D28>(Friday)</size>
 (金) あと1日=(Friday) 1 day left
