--- a/Translation/Sex Scene.txt
+++ b/Translation/Sex Scene.txt
@@ -15,7 +15,8 @@
 あぅ……うぅ……今日、お風呂入ってないのにぃ……＠=Au...Uu...I didn't take a bath yet...
 あぅ……うぅ……今日、お風呂入ってないのにぃ……=Au...Uu...I didn't take a bath yet...
 あぅ……うぅ……今日、お風呂入ってないのにぃ……<color%3D#fca4bc>❤<color%3Dwhite>=Au...Uu...I didn't take a bath yet...<color%3D#fca4bc>❤<color%3Dwhite>
-
+おじさん……出してないけど、いいの……？=Oji-san...You didn't cum yet, is it fine...?
+え……もう、終わり……？=Eh...We're done already...?
 
 // Reverse Cowgirl
 　……わ、わかった。=...I-I get it.
